--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </tr>
 </table>
 
-<a href="C:\Users\MWALED\Desktop\web development\html personal site\contacts.html">Contact</a>
+<a href="contacts.html">Contact</a>
 
   </body>
 </html>
